# RLM-Legal-Implementation

./: .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  DEPLOYMENT_VERIFICATION.md  DRAFT_PLAN.md  LICENSE  MANIFEST.IN  Makefile  README.md  docx_rlm_gui.py  pyproject.toml
.github/workflows/: README.md  test.yml
code-review/: SKILL.md
examples/: README.md  simple_query.py
explore-plan-code/: SKILL.md
goal-driven/: SKILL.md
gui/: README.md  app.py  chat_frame.py  config_frame.py  file_frame.py  log_viewer.py  workers.py
rlm/environments/: local_repl.py
rlm/logger/: rlm_logger.py
rlm_legal_docs/: README.md  __init__.py  app.py  chat_frame.py  citations.py  cli.py  config_frame.py  constants.py  extraction.py  extraction_schemas.py  extraction_store.py  file_frame.py  log_viewer.py  prompts.py  query.py  readers.py  workers.py
tests/: __init__.py  test_basic.py  test_citations.py  test_extraction.py  test_extraction_store.py  test_integration.py  test_prompts.py  test_schemas.py
tests/fixtures/: sample_contract.txt  sample_correspondence.txt
